--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <p>Darth Vader procura desenvolvedores que dominam o Front-End.</p>
             </div>
             <div class="card_right">
-                <img src="assets/asset-vader.png" alt="" srcset="">
+                <img src="assets/asset-vader.png" alt="">
             </div>
         </div>
 
